shader suite + namespace/shader update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 
 include_directories($(.))
 
-file(GLOB headers "*.h" "main.cpp" )
+file(GLOB CORE "*.h" "main.cpp" )
+source_group("Src" FILES ${CORE})
 
-add_executable(CSL_test ${headers} )
+file(GLOB SHADERS "shader_suite/*.h" )
+source_group("Src\\shaders" FILES ${SHADERS})
+
+add_executable(CSL_test ${CORE} ${SHADERS} )
