shader_suite hierarchy cleanup

--- a/src/shader_suite/CMakeLists.txt
+++ b/src/shader_suite/CMakeLists.txt
@@ -7,11 +7,14 @@ set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 
 include_directories($(.) $("../") )
 
-file(GLOB ShaderSuite "*.h" "*.cpp" "main.cpp" )
-source_group("Src" FILES ${ShaderSuite})
+file(GLOB ShaderSuiteApp "*.h" "*.cpp" "main.cpp" )
+source_group("Src" FILES ${ShaderSuiteApp})
+
+file(GLOB Shaders "shaders/*.h" "shaders/*.cpp")
+source_group("Src\\Shaders" FILES ${Shaders})
 
 file(GLOB CSL_CORE "./../csl/*.h")
 source_group("Src\\csl" FILES ${CSL_CORE})
 
 
-add_executable(CSL_ShaderSuite ${ShaderSuite} ${CSL_CORE} )
+add_executable(CSL_ShaderSuite ${ShaderSuiteApp} ${Shaders} ${CSL_CORE} )
