Simple Travis test 2

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ matrix:
       dist: bionic
       compiler: 
         -gcc
+    - os: linux
+      dist: bionic
+      compiler: 
         -clang
       # addons:
         # apt:
