Travis test build_type + platform

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,12 @@ matrix:
 
 before_install:
     - cmake --version
-    #- eval "${MATRIX_EVAL}"
     - cd src/shader_suite
     - mkdir build 
     - cd build
     
 script:
-    - cmake ..
+    - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_GENERATOR_PLATFORM=x64
     - cmake --build .
     
     
