v2 experiments + constexpr swizzles

--- a/src/shader_suite/CMakeLists.txt
+++ b/src/shader_suite/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 project(CSL_ShaderSuite)
 
@@ -16,5 +16,7 @@ source_group("Src\\Shaders" FILES ${Shaders})
 file(GLOB CSL_CORE "./../csl/*.hpp")
 source_group("Src\\csl" FILES ${CSL_CORE})
 
+file(GLOB CSL_CORE_v2 "./../v2/*.hpp")
+source_group("Src\\csl_v2" FILES ${CSL_CORE_v2})
 
-add_executable(CSL_ShaderSuite ${ShaderSuiteApp} ${Shaders} ${CSL_CORE} )
+add_executable(CSL_ShaderSuite ${ShaderSuiteApp} ${Shaders} ${CSL_CORE} ${CSL_CORE_v2} )
