--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/shader_suite/extlibs/imgui"]
 	path = src/shader_suite/extlibs/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "src/shader_suite/extlibs/glfw"]
+	path = src/shader_suite/extlibs/glfw
+	url = https://github.com/glfw/glfw.git
