--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,15 @@ language: cpp
 matrix:
   include:
     - os: linux
-      dist: bionic
+      dist: focal
       compiler: gcc
       env:
         - CMAKE_OPTS = ""
     - os: linux
-      dist: bionic
+      dist: focal
       compiler: clang
       env:
         - CMAKE_OPTS = ""
-      addons:
-        apt:
-          packages: 
-            - libstdc++-7-dev
     - os: windows
       env:
         - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
