Building instructions in Readme + resource path

--- a/src/shader_suite/CMakeLists.txt
+++ b/src/shader_suite/CMakeLists.txt
@@ -33,6 +33,9 @@ source_group("Src\\imgui" FILES ${CSL_IMGUI})
 set(CSL_CORE_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/../")
 set(CSL_SHADER_SUITE_SHADERS_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/shaders/")
 
+set(CSL_SHADER_SUITE_RESOURCE_PATH "\"${CMAKE_CURRENT_SOURCE_DIR}/../../resources/\"")
+add_compile_definitions(CSL_SHADER_SUITE_RESOURCE_PATH=${CSL_SHADER_SUITE_RESOURCE_PATH})
+
 # EXTLIBS
 set(CSL_SHADER_SUITE_EXTLIBS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/extlibs/")
 
