--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 branches:
   only:
   - master
-  - v2
 
 language: cpp
 
@@ -17,13 +16,14 @@ matrix:
       compiler: clang
       env:
         - STDFLAGS="-std=c++17"
-    - os: windows
-      env:
-        - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
-        - CMAKE_OPTS="-DCMAKE_BUILD_TYPE=Release"
-      before_script:
-        - export PATH=$MSBUILD_PATH:$PATH
-
+    ### disabling windows for now, Travis visual seems to have an issue with some fold expressions
+    #- os: windows
+    #  env:
+    #    - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
+    #    - CMAKE_OPTS="-DCMAKE_BUILD_TYPE=Release"
+    #  before_script:
+    #    - export PATH=$MSBUILD_PATH:$PATH
+    #
 
 before_install:
     - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get -y install xorg-dev; fi
