--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,11 +15,22 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: windows-latest
-
+    strategy:
+        matrix:
+            os : [windows-latest, ubuntu-latest, macos-latest]
+    
+    runs-on: ${{ matrix.os }}
+    
     steps:
     - uses: actions/checkout@v3
 
+    - name: Dependencies for Ubuntu
+      if: startsWith(matrix.os, 'ubuntu')
+      shell: bash
+      working-directory: ${{github.workspace}}
+      run: |
+          sudo apt-get update -y && sudo apt-get install xorg-dev
+          
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
